<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="wx_app_id">wxe4e9693e772d44fd</string>
    <string name="bugly_app_id">a61a741e4a</string>
    <string name="umeng_app_id">5ffd66fe6a2a470e8f762565</string>
    <string name="app_name">易学术</string>
    <string name="share_wechat">微信好友</string>
    <string name="share_wemoment">朋友圈</string>
    <string name="share_save_img">复制链接</string>
    <string name="share_copy_link">保存图片</string>
    <string name="cancel">取消</string>
    <string name="app_scheme">yyy</string>
    <string name="share_success">分享成功</string>
    <string name="copy_success">复制成功</string>
    <string name="download_success">保存成功</string>
    <string name="now_use">立即体验</string>
    <string name="hint_record_video_title">请输入视频标题</string>
    <string name="upload_success">上传成功</string>
    <string name="upload_failure">上传失败，请重试</string>
    <string name="video_compress_failure">视频压缩失败，请重试</string>
</resources>